Convert README.md to README.rst for better integration with PyPI

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include README.md setup.py setup.cfg MANIFEST.in
+include README.rst setup.py setup.cfg MANIFEST.in
 include versioneer.py
 include data_profiler/_version.py
 
