Add license etc to conda recipe, accommodate Anaconda name change.
As title.

Closes #6

--- a/condarecipe/meta.yaml
+++ b/condarecipe/meta.yaml
@@ -35,3 +35,9 @@ test:
   commands:
     - profiler -h
     - python -m pytest tests
+
+about:
+    home: https://github.com/numba/data_profiler
+    license: BSD
+    license_file: LICENSE
+    summary: An augmented version of cProfile and Snakeviz.
